Updated to JDK25 and ollama4j 1.1.6